fix(download-data): align right

--- a/src/components/pages/state/download-data.module.scss
+++ b/src/components/pages/state/download-data.module.scss
@@ -20,4 +20,5 @@
 .container {
   display: flex;
   align-items: center;
+  justify-content: right;
 }
